[gd_scene load_steps=3 format=2]

[ext_resource path="res://HexMesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://HexGridChunk.gd" type="Script" id=2]

[node name="HexGridChunk" type="Spatial"]
script = ExtResource( 2 )

[node name="TerrainMesh" parent="." instance=ExtResource( 1 )]

[node name="RiverMesh" parent="." instance=ExtResource( 1 )]

[node name="RoadMesh" parent="." instance=ExtResource( 1 )]

[node name="Labels" type="Spatial" parent="."]

[editable path="TerrainMesh"]
